--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa',
+			'org.springframework.boot:spring-boot-starter-web',
+			'org.postgresql:postgresql:9.4.1208'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
