--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,13 @@ repositories {
 
 dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa',
-			'org.springframework.boot:spring-boot-starter-web',
-			'org.postgresql:postgresql:9.4.1208'
+			'org.springframework.boot:spring-boot-starter-web'
+	runtime 'org.postgresql:postgresql:9.4.1208',
+			'com.h2database:h2:1.4.187'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+
+bootRun {
+	systemProperties = System.properties
 }
