--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,8 @@ spring:
   datasource:
     url: "jdbc:h2:mem:test"
     driver-class-name: org.h2.Driver
+  jpa:
+    hibernate.ddl-auto: update
 ---
 spring:
   profiles: production
