--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,10 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa',
-			'org.springframework.boot:spring-boot-starter-web'
+			'org.springframework.boot:spring-boot-starter-web',
+			'org.springframework.boot:spring-boot-starter-security'
 	runtime 'org.postgresql:postgresql:9.4.1208',
 			'com.h2database:h2:1.4.187'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
