--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,11 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate.ddl-auto: update
+  security:
+    name: user
+    password: password
+    role: USER
+
 ---
 spring:
   profiles: production
