--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ dependencies {
 			'org.springframework.boot:spring-boot-starter-security',
 			'org.springframework.boot:spring-boot-starter-data-jpa',
 			'org.springframework.boot:spring-boot-starter-data-redis',
-			'org.springframework.session:spring-session-data-redis:1.2.2.RELEASE'
+			'org.springframework.session:spring-session-data-redis:1.2.2.RELEASE',
+            "com.github.kstyrc:embedded-redis:0.6"
 	runtime 'org.postgresql:postgresql:9.4.1208',
 			'com.h2database:h2:1.4.187'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
