--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,13 @@ repositories {
 dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-web',
 			'org.springframework.boot:spring-boot-starter-security',
+            'org.springframework.boot:spring-boot-starter-actuator',
+            'org.springframework.boot:spring-boot-actuator-docs',
 			'org.springframework.boot:spring-boot-starter-data-jpa',
 			'org.springframework.boot:spring-boot-starter-data-redis',
 			'org.springframework.session:spring-session-data-redis:1.2.2.RELEASE',
-            "com.github.kstyrc:embedded-redis:0.6"
+            'com.github.kstyrc:embedded-redis:0.6',
+            'org.apache.commons:commons-lang3:3.4'
 	runtime 'org.postgresql:postgresql:9.4.1208',
 			'com.h2database:h2:1.4.187'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
