--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
             'org.springframework.boot:spring-boot-actuator-docs',
 			'org.springframework.boot:spring-boot-starter-data-jpa',
 			'org.springframework.boot:spring-boot-starter-data-redis',
-			'org.springframework.session:spring-session-data-redis:1.2.2.RELEASE',
+			'org.springframework.session:spring-session-data-redis',
             'com.github.kstyrc:embedded-redis:0.6',
             'org.apache.commons:commons-lang3:3.4'
 	runtime 'org.postgresql:postgresql:9.4.1208',
