--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,7 @@ spring:
     url: "jdbc:h2:mem:test"
     driver-class-name: org.h2.Driver
   jpa:
+    show-sql: true
     hibernate.ddl-auto: update
   security:
     name: user
