--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,32 @@
 buildscript {
 	ext {
-		springBootVersion = '1.4.1.RELEASE'
+		springBootVersion = '1.5.3.RELEASE'
 	}
 	repositories {
 		mavenCentral()
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.springframework:springloaded:1.2.7.RELEASE")
 	}
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
+
+idea {
+    module {
+        inheritOutputDirs = false
+        outputDir = file("$buildDir/classes/main/")
+    }
+}
 
 jar {
 	baseName = 'commerce'
 	version = '0.0.1-SNAPSHOT'
 }
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -30,13 +38,16 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-web',
 			'org.springframework.boot:spring-boot-starter-security',
             'org.springframework.boot:spring-boot-starter-actuator',
-            'org.springframework.boot:spring-boot-actuator-docs',
 			'org.springframework.boot:spring-boot-starter-data-jpa',
-			'org.springframework.boot:spring-boot-starter-data-redis',
-			'org.springframework.session:spring-session-data-redis',
+//			'org.springframework.boot:spring-boot-starter-data-redis',
+			'org.springframework.boot:spring-boot-devtools',
+			'org.springframework.boot:spring-boot-actuator-docs',
+//			'org.springframework.session:spring-session-data-redis',
+            'org.projectlombok:lombok',
             'com.github.kstyrc:embedded-redis:0.6',
-            'org.apache.commons:commons-lang3:3.4'
+            'org.apache.commons:commons-lang3:3.5'
 	runtime 'org.postgresql:postgresql:9.4.1208',
 			'com.h2database:h2:1.4.187'
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile 'org.springframework.boot:spring-boot-starter-test',
+				'org.springframework.security:spring-security-test'
 }
