--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,14 +1,17 @@
 spring:
+  output:
+      ansi:
+        enabled: ALWAYS
   datasource:
     url: "jdbc:h2:mem:test"
     driver-class-name: org.h2.Driver
   jpa:
     show-sql: true
     hibernate.ddl-auto: update
-  security:
-    name: user
-    password: password
-    role: USER
+#  security:
+#    name: user
+#    password: password
+#    role: USER
 
 ---
 spring:
