--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   output:
       ansi:
         enabled: ALWAYS
+  devtools:
+    livereload:
+      enabled: true
   datasource:
     url: "jdbc:h2:mem:test"
     driver-class-name: org.h2.Driver
